@@ -1,9 +1,11 @@
 2017-09-05  larissa9839  <larissa9839@gmail.com>
 
-	* tryXpath/scripts/try_xpath_functions.js: Change return value of
-	execExpr function.
+	* tryXpath/scripts/try_xpath_functions.js:
+	Change return value of execExpr function.
 	Define addClassToItem function.
 	Define addClassToItems function.
+	Define isElementItem function.
+	Define isNodeItem function.
 
 	* test/unit_test/jasmine/spec/spec.js:
 	Test className behavior.
